[tool.poetry]
name = "chattanooga"
version = "0.1.0"
description = ""
authors = ["Deonna Hodges <dnhodges@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
folium = "^0.19.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
